# cango.parallel_group

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/cango/: parallel_group.hpp
include/cango/parallel_group/: details.hpp
test/: grammar_test.cpp
